--- a/index.html
+++ b/index.html
@@ -2249,6 +2249,8 @@ document.addEventListener('DOMContentLoaded', function() {
                         <li><a href="#" class="hover:text-white transition-colors">Support</a></li>
                         <li><a href="#" class="hover:text-white transition-colors">Refund Policy</a></li>
                         <li><a href="#" class="hover:text-white transition-colors">Template Guide</a></li>
+                        <li><a href="about.html" class="hover:text-white transition-colors">About us</a></li>
+                        <li><a href="pricing.html" class="hover:text-white transition-colors">Pricing</a></li>
                     </ul>
                 </div>
                 <div>
