--- a/index.html
+++ b/index.html
@@ -2246,8 +2246,8 @@ document.addEventListener('DOMContentLoaded', function() {
                 <div>
                     <h3 class="text-xl font-bold mb-4">Quick Links</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition-colors">Support</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors">Refund Policy</a></li>
+                        <li><a href="contact.html" class="hover:text-white transition-colors">Support</a></li>
+                        <li><a href="refund.html" class="hover:text-white transition-colors">Refund Policy</a></li>
                         <li><a href="#" class="hover:text-white transition-colors">Template Guide</a></li>
                         <li><a href="about.html" class="hover:text-white transition-colors">About us</a></li>
                         <li><a href="pricing.html" class="hover:text-white transition-colors">Pricing</a></li>
