--- a/index.html
+++ b/index.html
@@ -185,14 +185,26 @@
         <!-- Enhanced CTAs -->
         <div class="space-y-6 mb-12">
             <!-- Primary CTA -->
-           <a href="https://rzp.io/rzp/08Wr24g"><button id="primary-cta" class="group relative inline-flex items-center justify-center w-full md:w-auto bg-gradient-to-r from-red-500 via-pink-500 to-red-600 hover:from-red-600 hover:via-pink-600 hover:to-red-700 text-white text-2xl font-black py-6 px-12 rounded-2xl transition-all duration-300 transform hover:scale-110 shadow-2xl hover:shadow-red-500/50" onclick="()">
-                <span class="absolute inset-0 bg-gradient-to-r from-white/0 via-white/20 to-white/0 transform -skew-x-12 translate-x-full group-hover:translate-x-0 transition-transform duration-700"></span>
-                <span class="relative flex items-center">
-                    <span class="text-3xl mr-3 animate-bounce">🔥</span>
-                    <span>GET ALL 55+ Notion TEMPLATES - $10</span>
-                    <span class="text-3xl ml-3 animate-bounce">🚀</span>
-                </span>
-            </button></a> 
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="Complete Bundle - All 55+ Notion Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="return" value="#">
+  <input type="hidden" name="cancel_return" value="#">
+
+  <button type="submit" id="primary-cta" 
+    class="group relative inline-flex items-center justify-center w-full md:w-auto bg-gradient-to-r from-red-500 via-pink-500 to-red-600 hover:from-red-600 hover:via-pink-600 hover:to-red-700 text-white text-2xl font-black py-6 px-12 rounded-2xl transition-all duration-300 transform hover:scale-110 shadow-2xl hover:shadow-red-500/50">
+      <span class="absolute inset-0 bg-gradient-to-r from-white/0 via-white/20 to-white/0 transform -skew-x-12 translate-x-full group-hover:translate-x-0 transition-transform duration-700"></span>
+      <span class="relative flex items-center">
+        <span class="text-3xl mr-3 animate-bounce">🔥</span>
+        <span>GET ALL 55+ Notion TEMPLATES - $10</span>
+        <span class="text-3xl ml-3 animate-bounce">🚀</span>
+      </span>
+  </button>
+</form>
+
 
             <!-- Secondary CTA -->
             <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-6">
