--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
   <input type="hidden" name="item_name" value="Complete Bundle - All 55+ Notion Templates">
   <input type="hidden" name="amount" value="10.00">
   <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="return" value="#">
-  <input type="hidden" name="cancel_return" value="#">
+  <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
 
   <button type="submit" id="primary-cta" 
     class="group relative inline-flex items-center justify-center w-full md:w-auto bg-gradient-to-r from-red-500 via-pink-500 to-red-600 hover:from-red-600 hover:via-pink-600 hover:to-red-700 text-white text-2xl font-black py-6 px-12 rounded-2xl transition-all duration-300 transform hover:scale-110 shadow-2xl hover:shadow-red-500/50">
@@ -435,9 +435,21 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="text-6xl font-bold">$10</div>
                 </div>
                 <div class="text-yellow-300 text-xl font-semibold mb-6">Save $14 (58% OFF)</div>
-            <a href="https://rzp.io/rzp/08Wr24g">    <button onclick="('bundle')" class="bg-white text-red-500 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 mb-4">
-                    Get All 55+ Notion Templates - $10
-                </button></a>
+               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="Complete Bundle - All 55+ Notion Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+   <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
+
+  <button type="submit" 
+    class="bg-white text-red-500 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 mb-4">
+    Get All 55+ Notion Templates - $10
+  </button>
+</form>
+
                 <div class="text-green-200 text-sm">✅ All 8 Categories • ✅ 55+ Notion Templates • ✅ Lifetime Updates</div>
             </div>
         </div>
@@ -778,9 +790,21 @@ document.addEventListener('DOMContentLoaded', function() {
                         <div class="text-sm text-purple-100">Get all future Notion templates and updates in every category</div>
                     </div>
                 </div>
-           <a href="https://rzp.io/rzp/08Wr24g">     <button onclick="('bundle')" class="bg-white text-purple-600 font-bold text-xl py-4 px-8 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105">
-                    Get Complete Bundle - $10 (Save $14!)
-                </button></a>
+               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="Complete Bundle - All 55+ Notion Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="return" value="#">
+  <input type="hidden" name="cancel_return" value="#">
+
+  <button type="submit" 
+    class="bg-white text-purple-600 font-bold text-xl py-4 px-8 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105">
+    Get Complete Bundle - $10 (Save $14!)
+  </button>
+</form>
+
             </div>
         </div>
     </div>
@@ -1231,9 +1255,21 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="text-purple-100 text-sm mt-1">Incredible value for money</div>
                 </div>
             </div>
-           <a href="https://rzp.io/rzp/08Wr24g"><button onclick="openCheckoutModa()" class="bg-white text-purple-600 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 shadow-2xl">
-                Get All Templates Now - $10
-            </button></a> 
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="All Templates Bundle - 55+ Notion Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
+  
+  <button type="submit" 
+    class="bg-white text-purple-600 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 shadow-2xl">
+    Get All Templates Now - $10
+  </button>
+</form>
+
         </div>
     </div>
 </section>
@@ -1654,9 +1690,21 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="text-purple-100 text-sm mt-1">Incredible value deal</div>
                 </div>
             </div>
-          <a href="https://rzp.io/rzp/08Wr24g"> <button onclick="openCheckoutModa()" class="bg-white text-purple-600 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 shadow-2xl">
-                Get All Templates Now - $10
-            </button></a> 
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="All Templates Now - 55+ Notion Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+ <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
+  
+  <button type="submit" 
+    class="bg-white text-purple-600 text-xl font-bold py-4 px-12 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105 shadow-2xl">
+    Get All Templates Now - $10
+  </button>
+</form>
+
         </div>
     </div>
 </section>
@@ -2079,9 +2127,21 @@ document.addEventListener('DOMContentLoaded', function() {
                 <span class="ml-2">✨</span>
             </div>
             <div>
-               <a href="https://rzp.io/rzp/08Wr24g"> <button onclick="()" class="bg-gradient-to-r from-red-500 to-pink-500 hover:from-red-600 hover:to-pink-600 text-white text-xl font-bold py-4 px-12 rounded-full transition-all transform hover:scale-105 shadow-2xl">
-                    Get Your Notion Templates Now - $10
-                </button></a>
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="Notion Templates Bundle - 55+ Templates">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
+
+  <button type="submit" 
+    class="bg-gradient-to-r from-red-500 to-pink-500 hover:from-red-600 hover:to-pink-600 text-white text-xl font-bold py-4 px-12 rounded-full transition-all transform hover:scale-105 shadow-2xl">
+    Get Your Notion Templates Now - $10
+  </button>
+</form>
+
             </div>
         </div>
     </div>
@@ -2234,9 +2294,21 @@ document.addEventListener('DOMContentLoaded', function() {
                 <div class="text-green-300 font-semibold text-lg">Save 95% Today!</div>
             </div>
             
-           <a href="https://rzp.io/rzp/08Wr24g"> <button onclick="()" class="bg-red-500 hover:bg-red-600 text-white text-2xl font-bold py-4 px-12 rounded-full transition-all transform hover:scale-105 pulse-glow mb-4">
-                Get All 55+ Notion Templates - $10
-            </button></a>
+           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="arunkumarsahajpur@gmail.com">
+  <input type="hidden" name="item_name" value="All 55+ Notion Templates Bundle">
+  <input type="hidden" name="amount" value="10.00">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
+  
+  <button type="submit" 
+    class="bg-red-500 hover:bg-red-600 text-white text-2xl font-bold py-4 px-12 rounded-full transition-all transform hover:scale-105 pulse-glow mb-4">
+    Get All 55+ Notion Templates - $10
+  </button>
+</form>
+
             
             <div class="text-green-300 font-semibold">
                 🛡️ 30-Day Money-Back Guarantee
