--- a/index.html
+++ b/index.html
@@ -796,8 +796,8 @@ document.addEventListener('DOMContentLoaded', function() {
   <input type="hidden" name="item_name" value="Complete Bundle - All 55+ Notion Templates">
   <input type="hidden" name="amount" value="10.00">
   <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="return" value="#">
-  <input type="hidden" name="cancel_return" value="#">
+  <input type="hidden" name="return" value="https://satisfying-arithmetic-e75.notion.site/Notion-Templates-Catalog-26d40b7c688680d9addcd6e9a7a002eb?pvs=74">
+  <input type="hidden" name="cancel_return" value="cancel.html">
 
   <button type="submit" 
     class="bg-white text-purple-600 font-bold text-xl py-4 px-8 rounded-full hover:bg-gray-100 transition-all transform hover:scale-105">
